# pattens-project-template

./: Changelog.md  README.md  pyproject.toml
.configs/: log.conf
docs/source/: conf.py  index.rst  modules.rst  ppt.rst  ppt.util.rst
src/ppt/util/: entrypoints.py  general.py  log_utils.py  logging.py  parsing.py
