[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ppt"
authors = [
    {name="Trinten Patten", email="trintenmpatten@gmail.com"}
]
description = "Collection of personal finance tools."
requires-python = ">=3.13"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows"
]
dynamic = ["readme","version"]
dependencies = [
    "build==1.2.2.post1",
    "coverage==7.8.0",
    "pytest==8.3.5",
    "setuptools==78.1.0",
    "sphinx==8.2.3",
    "ty==0.0.15",
    "bandit==1.8.3",
    "ruff==0.11.8",
]
license = "MIT"

[project.urls]
HomePage = "https://github.com/TrintenP/pattens-project-template"
Documentation = "https://trintenp.github.io/pattens-project-template/"
Issues = "https://github.com/TrintenP/pattens-project-template/issues"
ChangeLog = "https://github.com/TrintenP/pattens-project-template/blob/main/Changelog.MD"

# Project CLI Interfaces

[project.scripts]
ppt = "ppt.util.entrypoints:run_ppt"
run-docs = "pfts.util.entrypoints:generate_documentation"
run-tests = "pfts.util.entrypoints:run_testing"
run-ci = "pfts.util.entrypoints:run_local_ci"
version-bump = "pfts.util.entrypoints:version_bump"

[gui_scripts]
# Used to Launch GUI commands if applicable


# Tool Specific Configurations
[tool.setuptools.dynamic]
version = {attr = "ppt.__version__"}
readme =  {file = ["README.md"], content-type="text/markdown"}

[tool.bandit]
target = ["src"]

[tool.coverage.run]
source = ["src"]
omit = ["**/__init__.py", "**/entrypoints.py"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ty.environment]
root = ["src"]

[tool.uv.sources]
ppt = { path = "src", editable=true }

[tool.ruff]
line-length = 79
indent-width = 4
target-version = "py313"
respect-gitignore = true # Default value, just to making explict

[tool.ruff.lint]
select = ["W", "E", "F", "I"]
ignore = []
fixable = ["W", "E", "F", "I"]
unfixable = []

# Allows for unused variables if underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"